crates/formatter/tests/snapshots/snapshots__coder__fixtures__000024_example.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Example:
-- This fixture is applied after migrations/000024_site_config.up.sql
-- and inserts a value into site_configs that must not cause issues in
-- future migrations.

insert into site_configs (key, value) values ('mytest', 'example');
