crates/formatter/tests/snapshots/snapshots__coder__fixtures__000106_pre_workspace_agent_stats_connection_latency.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert into workspace_agent_stats (
	id,
	created_at,
	user_id,
	agent_id,
	workspace_id,
	template_id,
	connection_median_latency_ms
)
values
	(
		gen_random_uuid(),
		now(),
		gen_random_uuid(),
		gen_random_uuid(),
		gen_random_uuid(),
		gen_random_uuid(),
		1::bigint
	);
