crates/formatter/tests/snapshots/snapshots__coder__fixtures__000130_ha_coordinator.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert into tailnet_coordinators (id, heartbeat_at)
values ('a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11', '2023-06-15 10:23:54+00');

insert into tailnet_clients (id, agent_id, coordinator_id, updated_at, node)
values
	(
		'b0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11',
		'c0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11',
		'a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11',
		'2023-06-15 10:23:54+00',
		'{"preferred_derp": 12}'::json
	);

insert into tailnet_agents (id, coordinator_id, updated_at, node)
values
	(
		'c0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11',
		'a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11',
		'2023-06-15 10:23:54+00',
		'{"preferred_derp": 13}'::json
	);
