crates/formatter/tests/snapshots/snapshots__coder__fixtures__000156_pg_coordinator_single_tailnet.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert into tailnet_client_subscriptions (
	client_id,
	agent_id,
	coordinator_id,
	updated_at
)
values
	(
		'b0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11',
		'c0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11',
		'a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11',
		'2023-06-15 10:23:54+00'
	);
