crates/formatter/tests/snapshots/snapshots__coder__fixtures__000168_pg_coord_tailnet_v2_api.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert into tailnet_peers (id, coordinator_id, updated_at, node, status)
values
	(
		'c0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11',
		'a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11',
		'2023-06-15 10:23:54+00',
		'a fake protobuf byte string',
		'ok'
	);

insert into tailnet_tunnels (coordinator_id, src_id, dst_id, updated_at)
values
	(
		'a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11',
		'c0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11',
		'b0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11',
		'2023-06-15 10:23:54+00'
	);
