crates/formatter/tests/snapshots/snapshots__coder__fixtures__000191_ workspace_agent_port_share.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert into workspace_agent_port_share (
	workspace_id,
	agent_name,
	port,
	share_level
)
values
	(
		'b90547be-8870-4d68-8184-e8b2242b7c01',
		'qua',
		8080,
		'public'::app_sharing_level
	)
returning *;
