crates/formatter/tests/snapshots/snapshots__coder__fixtures__000221_notifications.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
do $$
declare
	template text;
begin
	select 'You successfully did {{.thing}}!' into template;
	insert into notification_templates (
		id,
		name,
		title_template,
		body_template,
		"group"
	)
	values
		(
			'a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11',
			'A',
			template,
			template,
			'Group 1'
		),
		(
			'b0eebc99-9c0b-4ef8-bb6d-6bb9bd380a12',
			'B',
			template,
			template,
			'Group 1'
		),
		(
			'c0eebc99-9c0b-4ef8-bb6d-6bb9bd380a13',
			'C',
			template,
			template,
			'Group 2'
		);
	insert into users (
		id,
		email,
		username,
		hashed_password,
		created_at,
		updated_at,
		status,
		rbac_roles,
		deleted
	)
	values
		(
			'fc1511ef-4fcf-4a3b-98a1-8df64160e35a',
			'githubuser@coder.com',
			'githubuser',
			'\x',
			'2022-11-02 13:05:21.445455+02',
			'2022-11-02 13:05:21.445455+02',
			'active',
			'{}',
			false
		)
	on conflict do nothing;
	insert into notification_messages (
		id,
		notification_template_id,
		user_id,
		method,
		created_by,
		payload
	)
	values
		(
			gen_random_uuid(),
			'a0eebc99-9c0b-4ef8-bb6d-6bb9bd380a11',
			'fc1511ef-4fcf-4a3b-98a1-8df64160e35a',
			'smtp'::notification_method,
			'test',
			'{}'
		);
end
$$;
